  - rename SPVM::ArrayUtil->copy_str to SPVM::ArrayUtil->copy_string
  - rename SPVM::Util to SPVM::NumberUtil
  - fix bug that le operator means lt.
  - in eq, ne, gt, ge, lt, le string comparison, undef is treated as most small value
    and these string comparison operators don't throw a exception.
  - add SPVM::ArrayUtil->dump_array_string
  - add SPVM::ArrayUtil->slice_array_string
0.0945 2021-04-22
  - rename SPVM::Byte->val to SPVM::Byte->value
  - rename SPVM::Short->val to SPVM::Short->value
  - rename SPVM::Int->val to SPVM::Int->value
  - rename SPVM::Long->val to SPVM::Long->value
  - rename SPVM::Float->val to SPVM::Float->value
  - rename SPVM::Double->val to SPVM::Double->value
  - move SPVM::Util->PI to SPVM::Math->PI
  - move SPVM::Util->E to SPVM::Math->E
  - remove SPVM::Math->pi
  - move SPVM::Util->abs to SPVM::Math->abs
  - move SPVM::Util->labs to SPVM::Math->labs

0.0944 2021-04-21
  - Logical Operator become non-expression.
  - rename SPVM::Util->copy_barray to SPVM::Util->copy_byte_array
  - rename SPVM::Util->equals_barray to SPVM::Util->equals_byte_array
  - rename SPVM::Util->copy_sarray to SPVM::Util->copy_short_array
  - rename SPVM::Util->equals_sarray to SPVM::Util->equals_short_array
  - rename SPVM::Util->copy_iarray to SPVM::Util->copy_int_array
  - rename SPVM::Util->equals_iarray to SPVM::Util->equals_int_array
  - rename SPVM::Util->copy_larray to SPVM::Util->copy_long_array
  - rename SPVM::Util->equals_larray to SPVM::Util->equals_long_array
  - rename SPVM::Util->copy_farray to SPVM::Util->copy_float_array
  - rename SPVM::Util->equals_farray to SPVM::Util->equals_float_array
  - rename SPVM::Util->copy_darray to SPVM::Util->copy_double_array
  - rename SPVM::Util->equals_darray to SPVM::Util->equals_double_array
  - rename SPVM::Util->copy_strarray to SPVM::Util->copy_string_array
  - rename SPVM::Util->equals_strarray to SPVM::Util->equals_string_array
  - rename SPVM::Util->copy_oarray to SPVM::Util->copy_object_array