@@ -4,6 +4,10 @@ package SPVM::ArrayUtil : precompile {
   use SPVM::StringUtil;
 
   sub copy_array_byte : byte[] ($nums : byte[]) {
+    if ($nums == undef) {
+      return undef;
+    }
+    
     my $length = @$nums;
 
     my $new_nums = new byte[$length];
@@ -16,6 +20,10 @@ package SPVM::ArrayUtil : precompile {
   }
 
   sub copy_array_short : short[] ($nums : short[]) {
+    if ($nums == undef) {
+      return undef;
+    }
+    
     my $length = @$nums;
 
     my $new_nums = new short[$length];
@@ -28,6 +36,10 @@ package SPVM::ArrayUtil : precompile {
   }
 
   sub copy_array_int : int[] ($nums : int[]) {
+    if ($nums == undef) {
+      return undef;
+    }
+    
     my $length = @$nums;
 
     my $new_nums = new int[$length];
@@ -40,6 +52,10 @@ package SPVM::ArrayUtil : precompile {
   }
 
   sub copy_array_long : long[] ($nums : long[]) {
+    if ($nums == undef) {
+      return undef;
+    }
+    
     my $length = @$nums;
 
     my $new_nums = new long[$length];
@@ -52,6 +68,10 @@ package SPVM::ArrayUtil : precompile {
   }
 
   sub copy_array_float : float[] ($nums : float[]) {
+    if ($nums == undef) {
+      return undef;
+    }
+    
     my $length = @$nums;
 
     my $new_nums = new float[$length];
@@ -64,6 +84,10 @@ package SPVM::ArrayUtil : precompile {
   }
 
   sub copy_array_double : double[] ($nums : double[]) {
+    if ($nums == undef) {
+      return undef;
+    }
+    
     my $length = @$nums;
 
     my $new_nums = new double[$length];
@@ -76,6 +100,10 @@ package SPVM::ArrayUtil : precompile {
   }
 
   sub copy_array_string : string[] ($strings : string[]) {
+    if ($strings == undef) {
+      return undef;
+    }
+    
     my $length = @$strings;
 
     my $new_strings = new string[$length];
@@ -88,6 +116,10 @@ package SPVM::ArrayUtil : precompile {
   }
   
   sub copy_array_object : object[] ($objects : object[], $cloner : SPVM::Cloner) {
+    if ($objects == undef) {
+      return undef;
+    }
+    
     my $length = @$objects;
 
     my $new_objects = new object[$length];
@@ -724,11 +756,11 @@ package SPVM::ArrayUtil : precompile {
 
   sub slice_string : string[] ($strings : string[], $offset : int, $length : int) {
 
-    if ($nums == undef) {
+    if ($strings == undef) {
       die "Offset $offset must be in the array range";
     }
 
-    my $array_length = @$nums;
+    my $array_length = @$strings;
 
     if ($offset < 0 || $offset > $array_length - 1) {
       die "Invalid offset $offset";
@@ -753,13 +785,13 @@ package SPVM::ArrayUtil : precompile {
     return $slice;
   }
 
-  sub slice_object : oarray ($elems : oarray, $offset : int, $length : int) {
+  sub slice_object : oarray ($objects : oarray, $offset : int, $length : int) {
 
-    if ($nums == undef) {
+    if ($objects == undef) {
       die "Offset $offset must be in the array range";
     }
 
-    my $array_length = @$nums;
+    my $array_length = @$objects;
 
     if ($offset < 0 || $offset > $array_length - 1) {
       die "Invalid offset $offset";
@@ -773,11 +805,11 @@ package SPVM::ArrayUtil : precompile {
       die "Offset + length must not be in the array range";
     }
 
-    my $slice = new_array_proto($elems, $length);
+    my $slice = new_array_proto($objects, $length);
 
     my $pos = 0;
     for (my $i = $offset; $i < $offset + $length; $i++) {
-      $slice->[$pos] = $elems->[$i];
+      $slice->[$pos] = $objects->[$i];
       $pos++;
     }
 
